--- a/contact.html
+++ b/contact.html
@@ -77,10 +77,10 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
             <span class="fas fa-bars fa-lg"></span>
           </button>
-         <a class="navbar-brand" href="./couche-couche.html"><img src="https://medias.lespetitsculottes.com/themes/les-petits-culottes-v2/img/section-couches-on.svg" class="rounded float-left" height="50" width="60"></span>    </a>
+         <a class="navbar-brand" href="./index.html"><img src="https://medias.lespetitsculottes.com/themes/les-petits-culottes-v2/img/section-couches-on.svg" class="rounded float-left" height="50" width="60"></span>    </a>
          <div class="collapse navbar-collapse" id="Navbar">
           <ul class="navbar-nav mr-auto">
-              <li class="nav-item active"><a class="nav-link" href="./couche-couche.html"><span class="fa fa-home fa-lg"></span> Acceuil</a></li>
+              <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Acceuil</a></li>
               <li class="nav-item"><a class="nav-link" href="./info.html"><span class="fa fa-info fa-lg"></span> Informations</a></li>
               <li class="nav-item"><a class="nav-link" href="./contact.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
           </ul>
