--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="carousel-inner" role="listbox">
           <!----------ITEM1 ---------------------------->
           <div class="carousel-item active">
-            <img class="d-block img-fluid" src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/Design%20sans%20titre/2.png" alt="First slide">
+            <img class="d-block img-fluid" src="https://github.com/Axellerationn/couche/blob/main/bebe2.jpg?raw=true" alt="First slide">
              <!---Contenu du slide 1 ---->
             <div class="carousel-caption d-none d-md-block">
             </div> <!--------------------->  
