--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
           <!------------ITEM2 -------------------------->
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/Design%20sans%20titre/3.png" alt="Second slide">
+            <img class="d-block img-fluid" src="https://github.com/Axellerationn/couche/blob/main/bebe1.jpg?raw=true" alt="Second slide">
 
             <!---Contenu du slide 2 ---->
             <div class="carousel-caption d-none d-md-block">
@@ -114,7 +114,7 @@
          </div>
           <!----------ITEM3 ---------------------------->
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/Design%20sans%20titre/1.png" alt="Third slide">
+            <img class="d-block img-fluid" src="https://github.com/Axellerationn/couche/blob/main/bebe3.jpg?raw=true" alt="Third slide">
           </div>
         </div>
         <!-------------------------CONTROLE CAROUSEL SLIDE PRECEDENT ---------------------------------------------->
@@ -134,7 +134,7 @@
     <div class="col-12 col-sm-6 col-md-4">
       <!-----------CARD-------------->
       <br><div class="card mycard">
-        <img class="card-img-top photo" src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/Design%20sans%20titre(2)/1.png" alt="Card image cap">
+        <img class="card-img-top photo" src="https://github.com/Axellerationn/couche/blob/main/couche1.2.jpg?raw=true" alt="Card image cap">
         <div class="card-body bodycard">
           <h5 class="card-title">Une protection d'origine naturelle en contact avec la peau qui préserve les fesses fragiles de bébé des allergies ou des rougeurs.</h5>
           <p class="card-text contentcard"></p>
@@ -150,7 +150,7 @@
     <div class="col-12 col-sm-6 col-md-4">
           <!-----------CARD-------------->
         <br><div class="card mycard">
-        <img class="card-img-top photo" src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/Design%20sans%20titre(2)/2.png" alt="Card image cap">
+        <img class="card-img-top photo" src="https://github.com/Axellerationn/couche/blob/main/couche2.jpg?raw=true" alt="Card image cap">
         <div class="card-body bodycard">
           <h5 class="card-title">Les parents apprécient particulièrement la protection efficace contre les fuites et la bonne absorption des couches, même durant la nuit.</h5>
           <p class="card-text contentcard"></p>
@@ -166,7 +166,7 @@
     <div class="col-12 col-sm-6 col-md-4">
         <!-----------CARD-------------->
         <br><div class="card mycard">
-          <img class="card-img-top photo" src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/Design%20sans%20titre(2)/3.png" alt="Card image cap">
+          <img class="card-img-top photo" src="https://github.com/Axellerationn/couche/blob/main/couche3.jpg?raw=true" alt="Card image cap">
           <div class="card-body bodycard">
             <h5 class="card-title">De nombreux parents soulignent l'absence d'irritations cutanées et la composition respectueuse de l'environnement des couches.</h5>
             <p class="card-text contentcard"></p>
@@ -182,7 +182,7 @@
     <div class="col-12 col-sm-6 col-md-4">
       <!-----------CARD-------------->
       <br><div class="card mycard">
-        <img class="card-img-top photo" src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/Design%20sans%20titre(2)/4.png" alt="Card image cap">
+        <img class="card-img-top photo" src="https://github.com/Axellerationn/couche/blob/main/couche4.png?raw=true" alt="Card image cap">
         <div class="card-body bodycard">
           <h5 class="card-title">Les couches écologiques de Biolane sont globalement bien appréciées par les parents pour leur absorption efficace et leur composition respectueuse de la peau des bébés, ce qui évite les irritations et les allergies.</h5>
           <p class="card-text contentcard"></p>
@@ -198,7 +198,7 @@
       <div class="col-12 col-sm-6 col-md-4">
       <!-----------CARD-------------->
       <br><div class="card mycard">
-        <img class="card-img-top photo" src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/Design%20sans%20titre(4)/1.png" alt="Card image cap">
+        <img class="card-img-top photo" src="https://github.com/Axellerationn/couche/blob/main/couche5.jpg?raw=true" alt="Card image cap">
         <div class="card-body bodycard">
           <h5 class="card-title">Couches made in France, ultra absorbantes et écologiques, dont l'emballage est fait à partir de 80% de matières plastique recyclées.</h5>
           <p class="card-text contentcard"></p>
@@ -214,7 +214,7 @@
       <div class="col-12 col-sm-6 col-md-4">
       <!-----------CARD-------------->
       <br><div class="card mycard">
-        <img class="card-img-top photo" src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/Design%20sans%20titre(4)/2.png" alt="Card image cap">
+        <img class="card-img-top photo" src="https://github.com/Axellerationn/couche/blob/main/couche6.jpeg?raw=true" alt="Card image cap">
         <div class="card-body bodycard">
           <h5 class="card-title">Couches écologiques à base de plantes, parfaites pour la peau sensible de bébé et qui empêchent les fuites.</h5>
           <p class="card-text contentcard"></p>
