les petits culottés.html

--- a/les petits culottés.html
+++ b/les petits culottés.html
@@ -91,7 +91,7 @@
       </div>
   </nav><!------------------------ End Nav ---------------------------------------------------->
   <div class="w3-container w3-center">
-  <br><br><br><br><br><br><br><br><img src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/brbr(2).png" style="width:80%;max-width:900px">
+  <br><br><br><br><br><br><br><br><img src="https://github.com/Axellerationn/couche/blob/main/brbr(2).png?raw=true" style="width:80%;max-width:900px">
     <p><h1>Le Petit Culottés</h1><br><h3>Les Petits Culottés, c'est une couche écologique française qui allie confort et design, fabriquée au cœur des Vosges. Une couche bébé saine, sans parfum, sans chlore, sans parabens, sans substances allergènes pour préserver la santé de votre bébé.</h3></p>
   </div>
   <div class="card-body bodycard">
