--- a/pampers.html
+++ b/pampers.html
@@ -91,7 +91,7 @@
       </div>
   </nav><!------------------------ End Nav ---------------------------------------------------->
   <div class="w3-container w3-center">
-  <br><br><br><br><br><br><br><br><img src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/brbr(1).png" style="width:80%;max-width:900px">
+  <br><br><br><br><br><br><br><br><img src="https://github.com/Axellerationn/couche/blob/main/brbr(1).png?raw=true" style="width:80%;max-width:900px">
     <p><h1>Pampers</h1><br><h3>Dotées d'un voile supérieur confortable et d'un exterieur résistant et tout doux, Les couches Pampers Harmonie sont hypoallergéniques. Elles sont conçues pour offrir une délicieuse sensation de douceur sur la peau de bébé. Elles contiennent 0% de parfum et lotion, et garde votre bébé jusqu'à 12 heures bien au sec.</h3></p>
   </div>
   <div class="card-body bodycard">
