love & green.html

--- a/love & green.html
+++ b/love & green.html
@@ -91,7 +91,7 @@
       </div>
   </nav><!------------------------ End Nav ---------------------------------------------------->
   <div class="w3-container w3-center">
-  <br><br><br><br><br><br><br><br><img src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/brbr(3).png" style="width:80%;max-width:900px">
+  <br><br><br><br><br><br><br><br><img src="https://github.com/Axellerationn/couche/blob/main/brbr(3).png?raw=true" style="width:80%;max-width:900px">
     <p><h1>Love & Green</h1><br><h3>Les couches Love & Green disposent d'un système de répartition qui permet une grande capacité d'absorption et qui laissent la peau de bébé bien au sec. Vous pouvez utiliser les couches Love & Green de jour comme de nuit, elles sont ultra-absorbantes !</h3></p>
   </div>
   <div class="card-body bodycard">
