--- a/biolane.html
+++ b/biolane.html
@@ -91,7 +91,7 @@
       </div>
   </nav><!------------------------ End Nav ---------------------------------------------------->
   <div class="w3-container w3-center">
-  <br><br><br><br><br><br><br><br><img src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/brbr(5).png" style="width:80%;max-width:900px">
+  <br><br><br><br><br><br><br><br><img src="https://github.com/Axellerationn/couche/blob/main/brbr(5).png?raw=true" style="width:80%;max-width:900px">
     <p><h1>Biolane</h1><br><h3>Sans ajout de substance irritante ou toxique, les couches Biolane sont parfaitement adaptées à la peau fragile de votre bébé. Nos couches sont conçues à base de matières d'origines naturelles et assurent une performance optimale pour garder les fesses de votre bébé bien au sec jusqu'à 12h.</h3></p>
   </div>
   <div class="card-body bodycard">
