--- a/dodies.html
+++ b/dodies.html
@@ -91,7 +91,7 @@
       </div>
   </nav><!------------------------ End Nav ---------------------------------------------------->
   <div class="w3-container w3-center">
-  <br><br><br><br><br><br><br><br><img src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/brbr(6).png" style="width:80%;max-width:900px">
+  <br><br><br><br><br><br><br><br><img src="https://github.com/Axellerationn/couche/blob/main/brbr(6).png?raw=true" style="width:80%;max-width:900px">
     <p><h1>Dodies</h1><br><h3>Dodie assure les arrières de votre bébé avec ces nouvelles couches écologiques, fabriquées en France. Toutes les matières au contact de la peau sont 100% d'origine naturelle et la double barrière anti-fuite garantit une protection maximale pendant 12 heures, de jour comme de nuit.</h3></p>
   </div>
   <div class="card-body bodycard">
