eco by naty.html

--- a/eco by naty.html
+++ b/eco by naty.html
@@ -91,7 +91,7 @@
       </div>
   </nav><!------------------------ End Nav ---------------------------------------------------->
   <div class="w3-container w3-center">
-  <br><br><br><br><br><br><br><br><img src="file://///srv-2019/dupouy$/sin/TP/Colone_Navbar_Caroussel/brbr(8).png" style="width:80%;max-width:900px">
+  <br><br><br><br><br><br><br><br><img src="https://github.com/Axellerationn/couche/blob/main/brbr(8).png?raw=true" style="width:80%;max-width:900px">
     <p><h1>Eco By Naty</h1><br><h3>Les couches ECO by Naty sont les seules couches écologiques qui empêchent la peau de votre bébé d'entrer en contact avec des matières plastiques.</h3></p>
   </div>
   <div class="card-body bodycard">
