--- a/info.html
+++ b/info.html
@@ -87,6 +87,14 @@
           </div>
       </div>
   </nav><!------------------------ End Nav ---------------------------------------------------->
-
+   <h1>Nos partenaires:</h1>
+   <p><br><ul>
+      <li>Les Petits Culottés</li>
+      <li>Pampers</li>
+      <li>Love & Green</li>
+      <li>Biolane</li>
+      <li>Dodie</li>
+      <li>Eco by Naty</li>
+   </ul></p>
 </body>
 </html>
