--- a/info.html
+++ b/info.html
@@ -87,7 +87,7 @@
           </div>
       </div>
   </nav><!------------------------ End Nav ---------------------------------------------------->
-   <h1>Nos partenaires:</h1>
+   <br><br><br><h1>Nos partenaires:</h1>
    <p><br><ul>
       <li>Les Petits Culottés</li>
       <li>Pampers</li>
