--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
         <div class="carousel-inner" role="listbox">
           <!----------ITEM1 ---------------------------->
           <div class="carousel-item active">
-            <img class="d-block img-fluid" src="https://github.com/Axellerationn/couche/blob/main/bebe2.jpg?raw=true" alt="First slide">
+            <img class="d-block img-fluid" src="https://github.com/Axellerationn/couche/blob/main/vrai%20bebe%201.png?raw=true" alt="First slide">
              <!---Contenu du slide 1 ---->
             <div class="carousel-caption d-none d-md-block">
             </div> <!--------------------->  
           </div>
           <!------------ITEM2 -------------------------->
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="https://github.com/Axellerationn/couche/blob/main/bebe1.jpg?raw=true" alt="Second slide">
+            <img class="d-block img-fluid" src="https://github.com/Axellerationn/couche/blob/main/vrai%20bebe%202.png?raw=true" alt="Second slide">
 
             <!---Contenu du slide 2 ---->
             <div class="carousel-caption d-none d-md-block">
@@ -114,7 +114,7 @@
          </div>
           <!----------ITEM3 ---------------------------->
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="https://github.com/Axellerationn/couche/blob/main/bebe3.jpg?raw=true" alt="Third slide">
+            <img class="d-block img-fluid" src="https://github.com/Axellerationn/couche/blob/main/vrai%20bebe%203.png?raw=true" alt="Third slide">
           </div>
         </div>
         <!-------------------------CONTROLE CAROUSEL SLIDE PRECEDENT ---------------------------------------------->
