--- a/info.html
+++ b/info.html
@@ -97,5 +97,6 @@
       <li>Dodie</li>
       <li>Eco by Naty</li>
    </ul></h4></p>
+   <a href="./index.html" class="btn btn-primary">Retourner a l'accueil</a>
 </body>
 </html>
