--- a/info.html
+++ b/info.html
@@ -97,6 +97,10 @@
       <li>Dodie</li>
       <li>Eco by Naty</li>
    </ul></h4></p>
-   <a href="./index.html" class="btn btn-primary">Retourner a l'accueil</a>
+   <div class="card-body bodycard">
+          <!-------Button ------------------------------------>
+          <a href="./index.html" class="btn btn-primary">Retourner à l'accueil</a>
+          <!----------------------------------------------->
+        </div>
 </body>
 </html>
