--- a/paiement.html
+++ b/paiement.html
@@ -126,7 +126,8 @@
           </div>
       </div>
   </nav><!------------------------ End Nav ---------------------------------------------------->
-  <h1>Paiement :</h1><br><br><br><br><br><br>
+    <br><br><br><br>
+  <h1>Paiement :</h1>
     <form id="payment-form">
         <div class="form-control" id="card-container"></div>
        <p> <label for="card-element">Informations de carte</label><br><br><br><br>
